Fix asset paths after directory restructuring

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   
   <section class="hero" id="inicio">
-    <div class="banner-container"><img src="recuros/patron1.svg" alt="Patrón de fondo" /></div>
+    <div class="banner-container"><img src="recursos/patron1.svg" alt="Patrón de fondo" /></div>
     <div class="container">
       <div class="hero-content center-block" data-aos="fade-up" data-aos-duration="800">
         <h1>Catálogo de Formación: Gestión, Innovación y Valor</h1>
