--- a/html/cursos.html
+++ b/html/cursos.html
@@ -794,10 +794,10 @@
             <button class="mobile-menu-btn">☰</button>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="html/cursos.html#cursos">Cursos</a></li>
                     <li><a href="html/cursos.html#financiamiento">Financiamiento</a></li>
-                    <li><a href="index.html#contacto">Contacto</a></li>
+                    <li><a href="../index.html#contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
