--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg bg-white-95 fixed-top custom-navbar" id="mainNavbar">
       <div class="container-fluid px-2 px-sm-3 px-lg-4">
         
-        <a class="navbar-brand d-flex align-items-center me-auto brand-left" href="index.html">
+        <a class="navbar-brand d-flex align-items-center me-auto brand-left" href="../index.html">
           <img src="css/logo.svg" alt="Crece Diseño" class="brand-logo" />
         </a>
 
@@ -42,10 +42,10 @@
         
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav ms-auto align-items-lg-center">
-            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="html/cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link active" href="html/nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html#contacto">Contacto</a></li>
           </ul>
         </div>
       </div>
@@ -268,10 +268,10 @@
         </div>
         <div class="footer-col">
           <h3>Enlaces Rápidos</h3>
-          <a href="index.html">Inicio</a>
+          <a href="../index.html">Inicio</a>
           <a href="html/cursos.html">Cursos</a>
           <a href="html/nosotros.html">Nosotros</a>
-          <a href="index.html#contacto">Contacto</a>
+          <a href="../index.html#contacto">Contacto</a>
         </div>
         <div class="footer-col">
           <h3>Recursos</h3>
@@ -303,7 +303,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
- >
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
