--- a/index.html
+++ b/index.html
@@ -28,26 +28,61 @@
   </div>
 
   
-  <div class="register-modal" id="registerModal" role="dialog" aria-modal="true" aria-labelledby="registerTitle" aria-hidden="true">
+    <div class="register-modal" id="registerModal" role="dialog" aria-modal="true" aria-labelledby="registerTitle" aria-hidden="true">
     <div class="register-content">
       <button class="register-close" id="registerClose" aria-label="Cerrar">&times;</button>
       <div class="register-header">
         <h2 id="registerTitle">Regístrate para recibir información</h2>
         <p>Completa tus datos para acceder a nuestro catálogo completo</p>
       </div>
-      <form id="registerForm" novalidate>
-        <div class="form-group">
-          <label for="email">Correo Electrónico</label>
-          <input type="email" id="email" class="form-control" placeholder="ejemplo@correo.com" required />
+      <form id="registerForm" action="/php/registrar.php" method="POST" novalidate>
+         <div class="form-group">
+          <label for="correo">Correo Electrónico</label>
+          <input
+            type="email"
+            name="correo"
+            id="correo"
+            class="form-control"
+            placeholder="ejemplo@correo.com"
+            required
+            maxlength="100"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            title="Ingresa un correo electrónico válido, por ejemplo: usuario@dominio.com"
+          />
         </div>
+
         <div class="form-group">
-          <label for="phone">Número Telefónico</label>
-          <input type="tel" id="phone" class="form-control" placeholder="+52 322 123 4567" required />
+          <label for="telefono">Número Telefónico</label>
+          <input
+            type="tel"
+            name="telefono"
+            id="telefono"
+            class="form-control"
+            placeholder="+52 322 123 4567"
+            required
+            minlength="10"
+            maxlength="15"
+            pattern="^\+?\d{10,15}$"
+            title="Solo números y signo +, entre 10 y 15 dígitos"
+          />
         </div>
+
         <div class="form-group">
-          <label for="city">Ciudad</label>
-          <input type="text" id="city" class="form-control" placeholder="Puerto Vallarta" required />
+          <label for="ciudad">Ciudad</label>
+          <input
+            type="text"
+            name="ciudad"
+            id="ciudad"
+            class="form-control"
+            placeholder="Puerto Vallarta"
+            required
+            minlength="3"
+            maxlength="50"
+            pattern="^[a-zA-ZÀ-ÿ\u00f1\u00d1\s]{3,50}$"
+            title="Solo letras y espacios (3 a 50 caracteres)"
+          />
         </div>
+
         <button type="submit" class="register-btn">Registrarse</button>
       </form>
       <div class="register-footer">
@@ -56,8 +91,9 @@
     </div>
   </div>
 
+
   
-  <div class="background-container"></div>
+  <div class="background-container"></div> 
 
   
    <header class="shadow-sm">
