--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="html/cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link active" href="html/nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="html/foro.html">Foro</a></li>
           </ul>
         </div>
       </div>
