Fix: Rutas de imagenes y header

--- a/html/foro.html
+++ b/html/foro.html
@@ -582,15 +582,15 @@
     <header>
         <div class="container header-container" style="justify-content: flex-start !important;">
             <div class="logo" style="display: flex; align-items: center; height: 100%; margin-right: auto;">
-                <img src="logo.svg" alt="Crece Diseño" style="height: 140px; width: auto;">
+                <img src="../recursos/logo.svg" alt="Crece Diseño" style="height: 140px; width: auto;">
             </div>
             <button class="mobile-menu-btn">☰</button>
             <nav>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="html/cursos.html">Cursos</a></li>
-                    <li><a href="index.html#nosotros">Nosotros</a></li>
-                    <li><a href="html/foro.html">Foro</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="../index.html#nosotros">Nosotros</a></li>
+                    <li><a href="foro.html">Foro</a></li>
                 </ul>
             </nav>
         </div>
@@ -598,7 +598,7 @@
 
     <!-- Hero Section -->
     <section class="hero" id="inicio">
-        <div class="banner-container"><img src="patron1.svg" alt="Banner Patron"></div>
+        <div class="banner-container"><img src="../resources/patron1.svg" alt="Banner Patron"></div>
         <div class="container">
             <div class="hero-content">
                 <h1>Foro de Comunicación</h1>
