--- a/html/foro.html
+++ b/html/foro.html
@@ -598,7 +598,7 @@
 
     <!-- Hero Section -->
     <section class="hero" id="inicio">
-        <div class="banner-container"><img src="../resources/patron1.svg" alt="Banner Patron"></div>
+        <div class="banner-container"><img src="../recursos/patron1.svg" alt="Banner Patron"></div>
         <div class="container">
             <div class="hero-content">
                 <h1>Foro de Comunicación</h1>
@@ -656,9 +656,9 @@
                 </div>
                 <div class="footer-col">
                     <h3>Enlaces Rápidos</h3>
-                    <a href="index.html">Inicio</a>
+                    <a href="../index.html">Inicio</a>
                     <a href="cursos.html">Cursos</a>
-                    <a href="index.html#nosotros">Nosotros</a>
+                    <a href="../index.html#nosotros">Nosotros</a>
                     <a href="foro.html">Foro</a>
                 </div>
                 <div class="footer-col">
