fix: rutas de navegacion en footer y nav bar

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <a href="#inicio">Inicio</a>
           <a href="html/cursos.html">Cursos</a>
           <a href="html/nosotros.html">Nosotros</a>
-          <a href="#contacto">Contacto</a>
+          <a href="/html/foro.html">Foro</a>
         </div>
         <div class="footer-col">
           <h3>Cursos</h3>
