--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -45,7 +45,7 @@
             <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link active" href="nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="../index.html#contacto">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="../html/foro.html">Foro</a></li>
           </ul>
         </div>
       </div>
@@ -271,7 +271,7 @@
           <a href="../index.html">Inicio</a>
           <a href="cursos.html">Cursos</a>
           <a href="nosotros.html">Nosotros</a>
-          <a href="../index.html#contacto">Contacto</a>
+          <a href="../html/foro.html">Foro</a>
         </div>
         <div class="footer-col">
           <h3>Recursos</h3>
