--- a/html/cursos.html
+++ b/html/cursos.html
@@ -885,7 +885,7 @@
                 </div>
                 
                 <div style="text-align: center; margin-top: 2rem;">
-                    <a href="index3.html#contacto" class="btn btn-primary">Solicitar Asesoría Personalizada</a>
+                    <a href="../html/nosotros.html" class="btn btn-primary">Solicitar Asesoría Personalizada</a>
                 </div>
             </div>
         </div>
@@ -929,7 +929,7 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy; 2023 Crece Diseño. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Crece Diseño. Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
