--- a/html/cursos.html
+++ b/html/cursos.html
@@ -44,7 +44,7 @@
             <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link active" href="./cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link" href="./nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="../index.html#contacto">Contacto</a></li>
+            <li class="nav-item"><a class="nav-link" href="../html/foro.html">Foro</a></li>
           </ul>
         </div>
       </div>
