--- a/html/cursos.html
+++ b/html/cursos.html
@@ -912,7 +912,7 @@
           <a href="../index.html#inicio">Inicio</a>
           <a href="./cursos.html">Cursos</a>
           <a href="./nosotros.html">Nosotros</a>
-          <a href="../index.html">Foro</a>
+          <a href="../html/foro.html">Foro</a>
         </div>
         <div class="footer-col">
           <h3>Cursos</h3>
