--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <div class="team-member h-100">
-            <div class="member-image"><img src="recursos/jb.jpg" alt="Josue Becerra R." /></div>
+            <div class="member-image"><img src="recursos/" alt="Josue Becerra R." /></div>
             <div class="member-info">
               <h4>Josue Becerra R.</h4>
               <p>Investigador</p>
