--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -191,7 +191,7 @@
         <div class="col-12 col-sm-6 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
           <div class="team-member h-100 text-center">
             <div class="member-image mx-auto">
-              <img src="../recursos/jb.jpg" alt="Josue Becerra R." />
+              <img src="../recursos/josebr.jpg" alt="Josue Becerra R." />
             </div>
             <div class="member-info">
               <h4>Josue Becerra R.</h4>
