fix: background en foro

--- a/html/foro.html
+++ b/html/foro.html
@@ -50,7 +50,7 @@
     </section>
 
     <!-- Foro Section -->
-    <section class="foro-section" id="foro">
+    <section class="about-section" id="foro">
         <div class="container">
             <h2 class="section-title">Comunicaciones y Anuncios</h2>
             <div class="foro-container">
