--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <li class="nav-item"><a class="nav-link" href="html/cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link" href="html/nosotros.html">Nosotros</a></li>
             <li class="nav-item"><a class="nav-link" href="html/foro.html">Foro</a></li>
+            <li class="nav-item"><a class="nav-link" href="html/foro.html">Mi Perfil</a></li>
           </ul>
         </div>
       </div>
