--- a/html/usuario.html
+++ b/html/usuario.html
@@ -405,8 +405,8 @@
             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="index.html#contacto">Contacto</a></li>
-            <li class="nav-item"><a class="nav-link active" href="perfil.html">Mi Perfil</a></li>
+            <li class="nav-item"><a class="nav-link" href="foro.html">Foro</a></li>
+            <li class="nav-item"><a class="nav-link active" href="usuario.html">Mi Perfil</a></li>
           </ul>
         </div>
       </div>
