--- a/html/foro.html
+++ b/html/foro.html
@@ -32,7 +32,7 @@
             <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link" href="../html/nosotros.html">Nosotros</a></li>
             <li class="nav-item"><a class="nav-link" href="foro.html">Foro</a></li>
-            <li class="nav-item"><a class="nav-link" href="html/usuario.html">Mi Perfil</a></li>
+            <li class="nav-item"><a class="nav-link" href="../html/usuario.html">Mi Perfil</a></li>
           </ul>
         </div>
       </div>
