--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -41,7 +41,7 @@
             <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link active" href="nosotros.html">Nosotros</a></li>
             <li class="nav-item"><a class="nav-link" href="../html/foro.html">Foro</a></li>
-            <li class="nav-item"><a class="nav-link" href="html/usuario.html">Mi Perfil</a></li>
+            <li class="nav-item"><a class="nav-link" href="../html/usuario.html">Mi Perfil</a></li>
           </ul>
         </div>
       </div>
