fix: href fotos corregidas

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -156,7 +156,7 @@
         <div class="col-12 col-sm-6 col-lg-3" data-aos="fade-up" data-aos-duration="800">
           <div class="team-member h-100 text-center">
             <div class="member-image mx-auto">
-              <img src="../recursos/nl.jpg" alt="Noeliz Lopez" />
+              <img src="../recursos/noelizcorregido.jpg" alt="Noeliz Lopez" />
             </div>
             <div class="member-info">
               <h4>Noeliz Lopez</h4>
@@ -168,7 +168,7 @@
         <div class="col-12 col-sm-6 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
           <div class="team-member h-100 text-center">
             <div class="member-image mx-auto">
-              <img src="../recursos/mn.jpg" alt="Marco A. Nava" />
+              <img src="../recursos/marco.jpg" alt="Marco A. Nava" />
             </div>
             <div class="member-info">
               <h4>Marco A. Nava</h4>
@@ -180,7 +180,7 @@
         <div class="col-12 col-sm-6 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
           <div class="team-member h-100 text-center">
             <div class="member-image mx-auto">
-              <img src="../recursos/gv.jpg" alt="Geronimo Vicencio" />
+              <img src="../recursos/vicencio.jpg" alt="Geronimo Vicencio" />
             </div>
             <div class="member-info">
               <h4>Geronimo Vicencio</h4>
