mensajes con el usuario registrado y respuestas con el usuario

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -40,7 +40,7 @@
             <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link active" href="nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="../html/foro.html">Foro</a></li>
+            <li class="nav-item"><a class="nav-link" href="../html/foro.php">Foro</a></li>
             <li class="nav-item"><a class="nav-link" href="../html/usuario.html">Mi Perfil</a></li>
           </ul>
         </div>
@@ -266,7 +266,7 @@
           <a href="../index.html">Inicio</a>
           <a href="cursos.html">Cursos</a>
           <a href="nosotros.html">Nosotros</a>
-          <a href="../html/foro.html">Foro</a>
+          <a href="../html/foro.php">Foro</a>
         </div>
         <div class="footer-col">
           <h3>Recursos</h3>
