--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link" href="html/cursos.html">Cursos</a></li>
             <li class="nav-item"><a class="nav-link" href="html/nosotros.html">Nosotros</a></li>
-            <li class="nav-item"><a class="nav-link" href="html/foro.html">Foro</a></li>
+            <li class="nav-item"><a class="nav-link" href="html/foro.php">Foro</a></li>
             <li class="nav-item"><a class="nav-link" href="html/usuario.html">Mi Perfil</a></li>
           </ul>
         </div>
@@ -201,7 +201,7 @@
           <a href="#inicio">Inicio</a>
           <a href="html/cursos.html">Cursos</a>
           <a href="html/nosotros.html">Nosotros</a>
-          <a href="/html/foro.html">Foro</a>
+          <a href="/html/foro.php">Foro</a>
         </div>
         <div class="footer-col">
           <h3>Cursos</h3>
