--- a/html/usuario.html
+++ b/html/usuario.html
@@ -604,6 +604,101 @@
         font-size: 1.25rem;
       }
     }
+    .profile-header {
+    position: relative;
+    color: #fff;
+     padding: 8rem 0 3rem; 
+    text-align: center;
+    overflow: hidden;
+    margin-top: 190px;
+  }
+
+  /* Fondo SVG semitransparente */
+  .profile-header .banner-container {
+    position: absolute;
+    inset: 0;
+    z-index: 0;
+    overflow: hidden;
+  }
+
+  .profile-header .banner-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.3; /* Ajusta la opacidad si quieres más o menos contraste */
+  }
+
+  /* Contenido */
+  .profile-container {
+    position: relative;
+    z-index: 1;
+  }
+
+  /* Avatar */
+  .profile-avatar {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    object-fit: cover;
+    margin-bottom: 20px;
+  }
+
+  /* Texto */
+  .profile-name {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+  }
+
+  .profile-title {
+    font-weight: 500;
+    color: #e4e4ff;
+    margin-bottom: 1rem;
+  }
+
+  /* Estadísticas */
+  .profile-stats {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    margin-top: 1.5rem;
+  }
+
+  .stat-item {
+    text-align: center;
+  }
+
+  .stat-number {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 700;
+    color: #fff;
+  }
+
+  .stat-label {
+    font-size: 0.9rem;
+    color: #e4e4ff;
+  }
+
+  /* Botón */
+  .btn-edit {
+    background: #4a3aff;
+    color: #fff;
+    font-weight: 600;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 18px;
+    margin-top: 1.5rem;
+    transition: all 0.2s ease;
+  }
+
+  .btn-edit:hover {
+    background: #3c32d9;
+    transform: scale(1.03);
+  }
+
   </style>
 </head>
 <body>
@@ -635,40 +730,45 @@
   </header>
 
   <!-- Profile Header -->
-  <section class="profile-header">
-    <div class="container profile-container">
-      <div class="text-center">
-        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" 
-             alt="Foto de perfil" class="profile-avatar">
-        <h1 class="profile-name"> Pedro García Rodríguez</h1>
-        <p class="profile-title">Diseñador Gráfica & Ilustradora</p>
-        <p class="w-75 mx-auto">Especializado en diseño de marca, ilustración digital y diseño UX/UI. Apasionado por crear experiencias visuales que conecten con las audiencias.</p>
-        
-        <div class="profile-stats">
-          <div class="stat-item">
-            <span class="stat-number">24</span>
-            <span class="stat-label">Cursos</span>
+    <section class="profile-header">
+      <div class="banner-container">
+        <img src="../recursos/patron1.svg" alt="Patrón de fondo" />
+      </div>
+
+      <div class="container profile-container">
+        <div class="text-center">
+          <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" 
+              alt="Foto de perfil" class="profile-avatar">
+          <h1 class="profile-name">Pedro García Rodríguez</h1>
+          <p class="profile-title">Diseñador Gráfica & Ilustradora</p>
+          <p class="w-75 mx-auto">Especializado en diseño de marca, ilustración digital y diseño UX/UI. Apasionado por crear experiencias visuales que conecten con las audiencias.</p>
+
+          <div class="profile-stats">
+            <div class="stat-item">
+              <span class="stat-number">24</span>
+              <span class="stat-label">Cursos</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">18</span>
+              <span class="stat-label">Completados</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">6</span>
+              <span class="stat-label">En progreso</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">3</span>
+              <span class="stat-label">Certificaciones</span>
+            </div>
           </div>
-          <div class="stat-item">
-            <span class="stat-number">18</span>
-            <span class="stat-label">Completados</span>
+
+          <div class="profile-actions">
+            <button class="btn btn-edit"><i class="fas fa-edit me-2"></i> Editar Perfil</button>
           </div>
-          <div class="stat-item">
-            <span class="stat-number">6</span>
-            <span class="stat-label">En progreso</span>
-          </div>
-          <div class="stat-item">
-            <span class="stat-number">3</span>
-            <span class="stat-label">Certificaciones</span>
-          </div>
-        </div>
-        
-        <div class="profile-actions">
-          <button class="btn btn-edit"><i class="fas fa-edit me-2"></i> Editar Perfil</button>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
 
   <!-- Main Content -->
   <main class="profile-content">
