fix de usuario y cosillas

--- a/html/cursos.html
+++ b/html/cursos.html
@@ -239,7 +239,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="1">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -262,7 +262,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="2">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -285,7 +285,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="3">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -308,7 +308,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="4">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -331,7 +331,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="5">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -354,7 +354,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="6">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -377,7 +377,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="7">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -402,7 +402,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="8">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -425,7 +425,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="9">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -448,7 +448,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="10">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -471,7 +471,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="11">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -494,7 +494,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="12">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -517,7 +517,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="13">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -540,7 +540,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="14">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -563,7 +563,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="15">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -586,7 +586,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="16">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -608,7 +608,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="17">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -636,7 +636,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="18">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -659,7 +659,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="19">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -684,7 +684,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="20">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -707,7 +707,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="21">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -730,7 +730,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="22">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -753,7 +753,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="23">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -792,7 +792,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="24">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -815,7 +815,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="25">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -838,7 +838,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="26">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -861,7 +861,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="27">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -888,7 +888,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="28">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -917,7 +917,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="29">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -950,7 +950,7 @@
                             <label class="course-selector">
                                 <input type="checkbox" class="course-checkbox" data-course-id="30">
                                 <span class="checkmark"></span>
-                                <span class="selector-text">Seleccionar</span>
+                                 <span class="selector-text">Añadir a mi perfil</span>
                             </label>
                         </div>
                         <div class="course-body">
@@ -1064,6 +1064,7 @@
           <a href="./cursos.html">Cursos</a>
           <a href="./nosotros.html">Nosotros</a>
           <a href="../html/foro.php">Foro</a>
+            <a href="../html/usuario.html">Contacto</a>
         </div>
         <div class="footer-col">
           <h3>Cursos</h3>
