--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -19,6 +19,7 @@
 
   
   <link rel="stylesheet" href="../css/styles.css" />
+  
 </head>
 <body>
   
@@ -267,6 +268,7 @@
           <a href="cursos.html">Cursos</a>
           <a href="nosotros.html">Nosotros</a>
           <a href="../html/foro.php">Foro</a>
+          <a href="../html/usuario.html">Mi Perfil</a>
         </div>
         <div class="footer-col">
           <h3>Recursos</h3>
@@ -331,5 +333,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="../js/scripts.js"></script>
+    <script>
+document.addEventListener("DOMContentLoaded", () => {
+  const fixPositionedElements = () => {
+    document.querySelectorAll('.whatsapp-float, .navbar').forEach(el => {
+      el.style.transform = "translateZ(0)"; // fuerza un re-render
+      el.style.willChange = "transform";
+    });
+  };
+
+  // Forzar re-render al inicio y tras un ligero retraso
+  fixPositionedElements();
+  setTimeout(fixPositionedElements, 600);
+
+  // También corregir al cambiar orientación o tamaño
+  window.addEventListener("resize", fixPositionedElements);
+  window.addEventListener("orientationchange", fixPositionedElements);
+});
+</script>
+
 </body>
 </html>
