--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
           <a href="html/cursos.html">Cursos</a>
           <a href="html/nosotros.html">Nosotros</a>
           <a href="/html/foro.php">Foro</a>
+          <a href="html/usuario.html">Mi Perfil</a>
         </div>
         <div class="footer-col">
           <h3>Cursos</h3>
